fixed banner display on mobile

--- a/css/teams.css
+++ b/css/teams.css
@@ -50,6 +50,7 @@ img.banner {
     width: 100%;
     height: 100%;
     padding-bottom: 15px;
+    min-height: 150px;
 }
 
 .team h1 {
